--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run atlassoft-ng:serve-ssr",
+    "serve:ssr": "node dist/atlassoft-ng/server/main.js",
+    "build:ssr": "ng build && ng run atlassoft-ng:server",
+    "prerender": "ng run atlassoft-ng:prerender"
   },
   "private": true,
   "dependencies": {
@@ -17,8 +21,11 @@
     "@angular/forms": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
+    "@angular/platform-server": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@nguniversal/express-engine": "^15.2.0",
     "bootstrap": "^4.1.3",
+    "express": "^4.15.2",
     "ionicons": "^7.1.0",
     "jquery": "^3.3.1",
     "magnific-popup": "^1.1.0",
@@ -40,8 +47,11 @@
     "@angular-devkit/build-angular": "^15.2.4",
     "@angular/cli": "~15.2.4",
     "@angular/compiler-cli": "^15.2.0",
+    "@nguniversal/builders": "^15.2.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
+    "@types/node": "^14.15.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
